<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.stefan.ingym.ui.fragment.sports.pedometer.activity.PreferencesActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.stefan.ingym.ui.fragment.sports.pedometer.activity.PreferencesActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:icon="@drawable/ic_walk_black_24dp"
        android:title="@string/pref_header_walking_modes">
        <intent
            android:targetClass="com.stefan.ingym.ui.fragment.sports.pedometer.activity.WalkingModesActivity"
            android:targetPackage="com.stefan.ingym.ui.fragment.sports.pedometer" />
    </header>

</preference-headers>
