<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stefan.ingym.ui.activity.Mine.SetPaymentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_payment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_payment"
            android:textSize="20sp"
            android:textColor="@color/app_white"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/save_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:text="@string/edit_save"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:gravity="center_vertical" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/blank_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/input_payment"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/set_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_weight="1"
            android:padding="15dp"
            android:hint="@string/input_payment_hint"
            android:textSize="20sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm_payment"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/confirm_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_weight="1"
            android:padding="15dp"
            android:hint="@string/confirm_payment_hint"
            android:textSize="20sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="60dp"
        android:text="@string/set_payment_tips"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        />

</LinearLayout>
