<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stefan.ingym.ui.activity.Mine.ModifyPaymentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/modify_payment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modify_payment"
            android:textSize="20sp"
            android:textColor="@color/app_white"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/payment_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:text="@string/edit_save"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:gravity="center_vertical" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/blank_background"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/input_old_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_weight="1"
            android:padding="15dp"
            android:hint="@string/input_old_password"
            android:textSize="20sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/input_new_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_weight="1"
            android:padding="15dp"
            android:hint="@string/input_new_password"
            android:textSize="20sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/confirm_new_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_weight="1"
            android:padding="15dp"
            android:hint="@string/confirm_new_input_password"
            android:textSize="20sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@mipmap/about_parting_line" />

    <TextView
        android:id="@+id/forgot_old_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="60dp"
        android:text="@string/forget_old_password"
        android:textColor="@color/text_gray"
        android:textSize="18sp"
        />

</LinearLayout>
