<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.Mine.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/app_white"
            android:gravity="center_vertical" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_corners"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@mipmap/icon_account"
            android:hint="@string/hint_count_name"
            android:textColor="@color/text_gray"
            android:textSize="15sp" >
        </EditText>

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@mipmap/icon_password"
            android:hint="@string/hint_register_password"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@mipmap/icon_password_confilm"
            android:hint="@string/hint_confilmPwd"
            android:inputType="textPassword"
            android:textColor="@color/text_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@mipmap/icon_email"
            android:hint="@string/hint_eamil"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/text_gray"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/tv_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/reset"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:background="@drawable/button_fullwidth"/>

</LinearLayout>
